--- a/CI-CD/RunTestEnv/pom.xml
+++ b/CI-CD/RunTestEnv/pom.xml
@@ -5,7 +5,7 @@
 		<groupId>bre.corp</groupId>
 		<artifactId>parent-pom</artifactId>
 		<version>1.0</version>
-		<relativePath></relativePath>
+		<relativePath>../../pom.xml</relativePath>
 	</parent>
 	
     <artifactId>run-test-env</artifactId>
@@ -66,6 +66,7 @@
 									<argument>-jar</argument>
 									<argument>${project.build.directory}/contact-services.jar</argument>
 								</arguments>
+								<async>true<async>
 							</configuration>                        
 						</execution>
 					</executions>
