--- a/CI-CD/RunTestEnv/pom.xml
+++ b/CI-CD/RunTestEnv/pom.xml
@@ -66,7 +66,7 @@
 									<argument>-jar</argument>
 									<argument>${project.build.directory}/contact-services.jar</argument>
 								</arguments>
-								<async>true<async>
+								<async>true</async>
 							</configuration>                        
 						</execution>
 					</executions>
